--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
   "dependencies": {
     "events": "^1.1.1",
     "flux": "^3.1.2",
-    "mysql": "^2.15.0"
+    "mysql": "^2.15.0",
+    "react-swipe": "^5.1.1",
+    "swiper": "^4.2.6"
   }
 }
