--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
   "author": "DK.Lan",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "events": "^1.1.1",
     "flux": "^3.1.2",
+    "jquery": "^3.3.1",
     "mysql": "^2.15.0"
   }
 }
